fixed spacing around scan items, WIP: getting chrome mobile to comply

--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,8 @@ body {
 }
 
 .scene {
+  margin: -45px;
+
   perspective: 500px;
 }
 
